--- a/.gitignore
+++ b/.gitignore
@@ -301,6 +301,9 @@ db.sqlite3
 # migrations/
 media/
 settings.py
+ptvs_virtualenv_proxy.py
+web.config
+web.debug.config
 
 # Flask stuff:
 instance/
